ADDED: Renderer for Style HTML

--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -63,6 +63,36 @@ parameters:
 		-
 			message: "#^Cannot call method getDue\\(\\) on BombenProdukt\\\\Xit\\\\Data\\\\DocumentItemModifiers\\|null\\.$#"
 			count: 2
+			path: src/Renderer/ClassRenderer.php
+
+		-
+			message: "#^Cannot call method getHasPriority\\(\\) on BombenProdukt\\\\Xit\\\\Data\\\\DocumentItemModifiers\\|null\\.$#"
+			count: 1
+			path: src/Renderer/ClassRenderer.php
+
+		-
+			message: "#^Cannot call method getPriorityLevel\\(\\) on BombenProdukt\\\\Xit\\\\Data\\\\DocumentItemModifiers\\|null\\.$#"
+			count: 1
+			path: src/Renderer/ClassRenderer.php
+
+		-
+			message: "#^Cannot call method getPriorityPadding\\(\\) on BombenProdukt\\\\Xit\\\\Data\\\\DocumentItemModifiers\\|null\\.$#"
+			count: 1
+			path: src/Renderer/ClassRenderer.php
+
+		-
+			message: "#^Cannot call method getTags\\(\\) on BombenProdukt\\\\Xit\\\\Data\\\\DocumentItemModifiers\\|null\\.$#"
+			count: 2
+			path: src/Renderer/ClassRenderer.php
+
+		-
+			message: "#^Parameter \\#1 \\$text of static method BombenProdukt\\\\Xit\\\\Element\\\\Class\\\\AbstractElement\\:\\:fromString\\(\\) expects string, string\\|null given\\.$#"
+			count: 6
+			path: src/Renderer/ClassRenderer.php
+
+		-
+			message: "#^Cannot call method getDue\\(\\) on BombenProdukt\\\\Xit\\\\Data\\\\DocumentItemModifiers\\|null\\.$#"
+			count: 2
 			path: src/Renderer/DocumentRenderer.php
 
 		-
@@ -89,3 +119,63 @@ parameters:
 			message: "#^Right side of \\|\\| is always true\\.$#"
 			count: 1
 			path: src/Renderer/DocumentRenderer.php
+
+		-
+			message: "#^Cannot call method getDue\\(\\) on BombenProdukt\\\\Xit\\\\Data\\\\DocumentItemModifiers\\|null\\.$#"
+			count: 2
+			path: src/Renderer/StyleRenderer.php
+
+		-
+			message: "#^Cannot call method getHasPriority\\(\\) on BombenProdukt\\\\Xit\\\\Data\\\\DocumentItemModifiers\\|null\\.$#"
+			count: 1
+			path: src/Renderer/StyleRenderer.php
+
+		-
+			message: "#^Cannot call method getPriorityLevel\\(\\) on BombenProdukt\\\\Xit\\\\Data\\\\DocumentItemModifiers\\|null\\.$#"
+			count: 1
+			path: src/Renderer/StyleRenderer.php
+
+		-
+			message: "#^Cannot call method getPriorityPadding\\(\\) on BombenProdukt\\\\Xit\\\\Data\\\\DocumentItemModifiers\\|null\\.$#"
+			count: 1
+			path: src/Renderer/StyleRenderer.php
+
+		-
+			message: "#^Cannot call method getTags\\(\\) on BombenProdukt\\\\Xit\\\\Data\\\\DocumentItemModifiers\\|null\\.$#"
+			count: 2
+			path: src/Renderer/StyleRenderer.php
+
+		-
+			message: "#^Parameter \\#1 \\$text of static method BombenProdukt\\\\Xit\\\\Element\\\\Style\\\\AbstractElement\\:\\:fromString\\(\\) expects string, string\\|null given\\.$#"
+			count: 6
+			path: src/Renderer/StyleRenderer.php
+
+		-
+			message: "#^Cannot call method getDue\\(\\) on BombenProdukt\\\\Xit\\\\Data\\\\DocumentItemModifiers\\|null\\.$#"
+			count: 2
+			path: src/Renderer/TailwindRenderer.php
+
+		-
+			message: "#^Cannot call method getHasPriority\\(\\) on BombenProdukt\\\\Xit\\\\Data\\\\DocumentItemModifiers\\|null\\.$#"
+			count: 1
+			path: src/Renderer/TailwindRenderer.php
+
+		-
+			message: "#^Cannot call method getPriorityLevel\\(\\) on BombenProdukt\\\\Xit\\\\Data\\\\DocumentItemModifiers\\|null\\.$#"
+			count: 1
+			path: src/Renderer/TailwindRenderer.php
+
+		-
+			message: "#^Cannot call method getPriorityPadding\\(\\) on BombenProdukt\\\\Xit\\\\Data\\\\DocumentItemModifiers\\|null\\.$#"
+			count: 1
+			path: src/Renderer/TailwindRenderer.php
+
+		-
+			message: "#^Cannot call method getTags\\(\\) on BombenProdukt\\\\Xit\\\\Data\\\\DocumentItemModifiers\\|null\\.$#"
+			count: 2
+			path: src/Renderer/TailwindRenderer.php
+
+		-
+			message: "#^Parameter \\#1 \\$text of static method BombenProdukt\\\\Xit\\\\Element\\\\Tailwind\\\\AbstractElement\\:\\:fromString\\(\\) expects string, string\\|null given\\.$#"
+			count: 6
+			path: src/Renderer/TailwindRenderer.php
