MAINTENANCE: Update GitHub links

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 			"role": "Developer"
 		}
 	],
-	"homepage": "https://github.com/BombenProdukt/xit",
+	"homepage": "https://github.com/faustbrian/xit",
 	"require": {
 		"php": "^8.2",
 		"bombenprodukt/laravel-package-powerpack": "^1.0",
