--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -36,6 +36,16 @@ parameters:
 			path: src/Element/AbstractElement.php
 
 		-
+			message: "#^Only booleans are allowed in &&, int\\|false given on the right side\\.$#"
+			count: 1
+			path: src/Parser/DocumentParser.php
+
+		-
+			message: "#^Only booleans are allowed in an if condition, int\\|false given\\.$#"
+			count: 7
+			path: src/Parser/DocumentParser.php
+
+		-
 			message: "#^Parameter \\#1 \\$content of method BombenProdukt\\\\Xit\\\\Parser\\\\ModifierParser\\:\\:parse\\(\\) expects string, string\\|null given\\.$#"
 			count: 1
 			path: src/Parser/DocumentParser.php
@@ -49,6 +59,16 @@ parameters:
 			message: "#^Parameter \\#3 \\$subject of function preg_replace expects array\\|string, string\\|null given\\.$#"
 			count: 4
 			path: src/Parser/DocumentParser.php
+
+		-
+			message: "#^Call to function is_array\\(\\) with array will always evaluate to true\\.$#"
+			count: 1
+			path: src/Parser/ModifierParser.php
+
+		-
+			message: "#^Only booleans are allowed in an if condition, array\\<string\\> given\\.$#"
+			count: 3
+			path: src/Parser/ModifierParser.php
 
 		-
 			message: "#^Cannot call method getDue\\(\\) on BombenProdukt\\\\Xit\\\\Data\\\\DocumentItemModifiers\\|null\\.$#"
@@ -73,6 +93,11 @@ parameters:
 		-
 			message: "#^Cannot call method getTags\\(\\) on BombenProdukt\\\\Xit\\\\Data\\\\DocumentItemModifiers\\|null\\.$#"
 			count: 2
+			path: src/Renderer/AbstractHtmlRenderer.php
+
+		-
+			message: "#^Only booleans are allowed in an if condition, int\\<0, max\\> given\\.$#"
+			count: 1
 			path: src/Renderer/AbstractHtmlRenderer.php
 
 		-
@@ -123,6 +148,16 @@ parameters:
 		-
 			message: "#^Cannot call method getTags\\(\\) on BombenProdukt\\\\Xit\\\\Data\\\\DocumentItemModifiers\\|null\\.$#"
 			count: 2
+			path: src/Renderer/TextRenderer.php
+
+		-
+			message: "#^Only booleans are allowed in an if condition, int\\<0, max\\> given\\.$#"
+			count: 1
+			path: src/Renderer/TextRenderer.php
+
+		-
+			message: "#^Only booleans are allowed in \\|\\|, BombenProdukt\\\\Xit\\\\Enum\\\\ItemType\\:\\:ItemContinuation given on the right side\\.$#"
+			count: 1
 			path: src/Renderer/TextRenderer.php
 
 		-
